After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768771 - openh264: Fail to build with openh264 1.6.0
openh264: Fail to build with openh264 1.6.0
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Linux
: Normal normal
: 1.9.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-07-13 12:10 UTC by Christian Marillat
Modified: 2016-07-19 12:22 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Marillat 2016-07-13 12:10:13 UTC
gst-plugins-bad 1.8.2 fail to build with openh264 1.6.0

libtool: compile:  g++ -DHAVE_CONFIG_H -I. -I../.. -Wdate-time -D_FORTIFY_SOURCE=2 -pthread -I/usr/include/gstreamer-1.0 -I/usr/lib/i386-linux-gnu/gstreamer-1.0/include -I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include -pthread -I/usr/include/gstreamer-1.0 -I/usr/lib/i386-linux-gnu/gstreamer-1.0/include -I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include -DGST_USE_UNSTABLE_API -DG_THREADS_MANDATORY -DG_DISABLE_CAST_CHECKS -Wall -Wmissing-declarations -Wredundant-decls -Wwrite-strings -Wformat-nonliteral -Wformat-security -Winit-self -Wmissing-include-dirs -Waddress -Wno-multichar -g -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -c gstopenh264enc.cpp  -fPIC -DPIC -o .libs/libgstopenh264_la-gstopenh264enc.o
gstopenh264enc.cpp: In function 'GType gst_openh264enc_slice_mode_get_type()':
gstopenh264enc.cpp:123:6: error: 'SM_AUTO_SLICE' was not declared in this scope
     {SM_AUTO_SLICE, "Number of slices equal to number of threads", "auto"},
      ^
gstopenh264enc.cpp: In function 'void gst_openh264enc_class_init(GstOpenh264EncClass*)':
gstopenh264enc.cpp:192:33: error: 'SM_AUTO_SLICE' was not declared in this scope
 #define DEFAULT_SLICE_MODE      SM_AUTO_SLICE
                                 ^
gstopenh264enc.cpp:371:44: note: in expansion of macro 'DEFAULT_SLICE_MODE'
           GST_TYPE_OPENH264ENC_SLICE_MODE, DEFAULT_SLICE_MODE,
                                            ^
gstopenh264enc.cpp: In function 'void gst_openh264enc_init(GstOpenh264Enc*)':
gstopenh264enc.cpp:192:33: error: 'SM_AUTO_SLICE' was not declared in this scope
 #define DEFAULT_SLICE_MODE      SM_AUTO_SLICE
                                 ^
gstopenh264enc.cpp:408:35: note: in expansion of macro 'DEFAULT_SLICE_MODE'
   openh264enc->priv->slice_mode = DEFAULT_SLICE_MODE;
                                   ^
gstopenh264enc.cpp: In function 'gboolean gst_openh264enc_set_format(GstVideoEncoder*, GstVideoCodecState*)':
gstopenh264enc.cpp:737:32: error: 'struct SSpatialLayerConfig' has no member named 'sSliceCfg'
   enc_params.sSpatialLayers[0].sSliceCfg.uiSliceMode =
                                ^
gstopenh264enc.cpp:739:32: error: 'struct SSpatialLayerConfig' has no member named 'sSliceCfg'
   enc_params.sSpatialLayers[0].sSliceCfg.sSliceArgument.uiSliceNum =
                                ^
Makefile:957: recipe for target 'libgstopenh264_la-gstopenh264enc.lo' failed
Comment 1 Tim-Philipp Müller 2016-07-18 17:42:38 UTC
Thanks for the report.

commit 9f2dfaaa7a97d3eac298f5d09ea1e0f29be5a848
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Mon Jul 18 18:36:42 2016 +0100

    openh264: fix up for API changes in v1.6.0
    
    Update for API changes in v1.6.0.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=768771
Comment 2 Christian Marillat 2016-07-19 12:22:29 UTC
Thanks.

Do you intent to backport this change to the current stable 1.8 ?