openh264: fix up for API changes in v1.6.0

Update for API changes in v1.6.0.

https://bugzilla.gnome.org/show_bug.cgi?id=768771