ext/openh264/gstopenh264enc.cpp
@@ -46,6 +46,8 @@
 GST_DEBUG_CATEGORY_STATIC (gst_openh264enc_debug_category);
 #define GST_CAT_DEFAULT gst_openh264enc_debug_category
 
+/* FIXME: we should not really directly use the enums from the openh264 API
+ * here, since it might change or be removed */
 #define GST_TYPE_USAGE_TYPE (gst_openh264enc_usage_type_get_type ())
 static GType
 gst_openh264enc_usage_type_get_type (void)
@@ -119,15 +121,15 @@ static GType
 gst_openh264enc_slice_mode_get_type (void)
 {
   static const GEnumValue types[] = {
-    {SM_FIXEDSLCNUM_SLICE, "num-slices slices", "n-slices"},
-    {SM_AUTO_SLICE, "Number of slices equal to number of threads", "auto"},
+    {GST_OPENH264_SLICE_MODE_N_SLICES, "Fixed number of slices", "n-slices"},
+    {GST_OPENH264_SLICE_MODE_AUTO, "Number of slices equal to number of threads", "auto"},
     {0, NULL, NULL},
   };
   static gsize id = 0;
 
-  if (g_once_init_enter (& id)) {
-    GType _id = g_enum_register_static ("GstOpenh264encSliceModes", types);
-    g_once_init_leave (& id, _id);
+  if (g_once_init_enter (&id)) {
+    GType _id = g_enum_register_static ("GstOpenh264EncSliceMode", types);
+    g_once_init_leave (&id, _id);
   }
 
   return (GType) id;
@@ -189,7 +191,7 @@ static void gst_openh264enc_set_rate_control (GstOpenh264Enc * openh264enc,
 #define DEFAULT_BACKGROUND_DETECTION TRUE
 #define DEFAULT_ADAPTIVE_QUANTIZATION TRUE
 #define DEFAULT_SCENE_CHANGE_DETECTION TRUE
-#define DEFAULT_SLICE_MODE      SM_FIXEDSLCNUM_SLICE
+#define DEFAULT_SLICE_MODE      GST_OPENH264_SLICE_MODE_N_SLICES
 #define DEFAULT_NUM_SLICES      1
 #define DEFAULT_COMPLEXITY      MEDIUM_COMPLEXITY
 
@@ -235,7 +237,7 @@ struct _GstOpenh264EncPrivate
   gboolean background_detection;
   gboolean adaptive_quantization;
   gboolean scene_change_detection;
-  SliceModeEnum slice_mode;
+  GstOpenh264EncSliceMode slice_mode;
   guint num_slices;
   ECOMPLEXITY_MODE complexity;
 };
@@ -508,7 +510,7 @@ gst_openh264enc_set_property (GObject * object, guint property_id,
       break;
 
     case PROP_SLICE_MODE:
-      openh264enc->priv->slice_mode = (SliceModeEnum) g_value_get_enum (value);
+      openh264enc->priv->slice_mode = (GstOpenh264EncSliceMode) g_value_get_enum (value);
       break;
 
     case PROP_NUM_SLICES:
@@ -660,6 +662,8 @@ gst_openh264enc_set_format (GstVideoEncoder * encoder,
   gchar *debug_caps;
   guint width, height, fps_n, fps_d;
   SEncParamExt enc_params;
+  SliceModeEnum slice_mode = SM_SINGLE_SLICE;
+  guint n_slices = 1;
   gint ret;
   GstCaps *outcaps;
   GstVideoCodecState *output_state;
@@ -726,10 +730,32 @@ gst_openh264enc_set_format (GstVideoEncoder * encoder,
   enc_params.sSpatialLayers[0].iVideoHeight = height;
   enc_params.sSpatialLayers[0].fFrameRate = fps_n * 1.0 / fps_d;
   enc_params.sSpatialLayers[0].iSpatialBitrate = openh264enc->priv->bitrate;
-  enc_params.sSpatialLayers[0].sSliceCfg.uiSliceMode =
-      openh264enc->priv->slice_mode;
-  enc_params.sSpatialLayers[0].sSliceCfg.sSliceArgument.uiSliceNum =
-      openh264enc->priv->num_slices;
+
+  if (priv->slice_mode == GST_OPENH264_SLICE_MODE_N_SLICES) {
+    if (priv->num_slices == 1)
+      slice_mode = SM_SINGLE_SLICE;
+    else
+      slice_mode = SM_FIXEDSLCNUM_SLICE;
+     n_slices = priv->num_slices;
+  } else if (priv->slice_mode == GST_OPENH264_SLICE_MODE_AUTO) {
+#if OPENH264_MAJOR == 1 && OPENH264_MINOR < 6
+    slice_mode = SM_AUTO_SLICE;
+#else
+    slice_mode = SM_FIXEDSLCNUM_SLICE;
+    n_slices = 0;
+#endif
+  } else {
+    GST_ERROR_OBJECT (openh264enc, "unexpected slice mode %d", priv->slice_mode);
+    slice_mode = SM_SINGLE_SLICE;
+  }
+
+#if OPENH264_MAJOR == 1 && OPENH264_MINOR < 6
+  enc_params.sSpatialLayers[0].sSliceCfg.uiSliceMode = slice_mode;
+  enc_params.sSpatialLayers[0].sSliceCfg.sSliceArgument.uiSliceNum = n_slices;
+#else
+  enc_params.sSpatialLayers[0].sSliceArgument.uiSliceMode = slice_mode;
+  enc_params.sSpatialLayers[0].sSliceArgument.uiSliceNum = n_slices;
+#endif
 
   priv->framerate = (1 + fps_n / fps_d);
 
