ext/openh264/gstopenh264enc.h
@@ -34,6 +34,13 @@
 #include <gst/video/gstvideoencoder.h>
 
 G_BEGIN_DECLS
+
+typedef enum
+{
+  GST_OPENH264_SLICE_MODE_N_SLICES = 1,  /* SM_FIXEDSLCNUM_SLICE */
+  GST_OPENH264_SLICE_MODE_AUTO = 5       /* former SM_AUTO_SLICE */
+} GstOpenh264EncSliceMode;
+
 #define GST_TYPE_OPENH264ENC          (gst_openh264enc_get_type())
 #define GST_OPENH264ENC(obj)          (G_TYPE_CHECK_INSTANCE_CAST((obj),GST_TYPE_OPENH264ENC,GstOpenh264Enc))
 #define GST_OPENH264ENC_CLASS(klass)  (G_TYPE_CHECK_CLASS_CAST((klass),GST_TYPE_OPENH264ENC,GstOpenh264EncClass))
